2009-04-23  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#112122 - Edit Button Tweaking

	* src/home/hd-home.c (hd_home_create_edit_button): Reduce the width of
	the edit button.

2009-04-23  Gordon Williams <gordon.williams@collabora.co.uk>

 	* src/launcher/hd-launcher-tile.c: Now load brightness value for tile
	* src/tidy/tidy-highlight.c: Changed blur pattern to smooth out blur
	* src/mb/hd-comp-mgr.h: Adjusted Operator spacing to Spec v2.2
	* data/transitions.ini: Removed unused items, added brightness option,
	  raised saturation back to 0.8 at Martin's request

2009-04-23  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/launcher/hd-launcher-grid.c: Fix so that un-filled lines
	are left-justified again.

2009-04-23  Gordon Williams <gordon.williams@collabora.co.uk>
	
	* src/launcher/hd-launcher.h
	* src/launcher/hd-launcher.c	
	* src/launcher/hd-launcher-page.c
	* src/launcher/hd-launcher-grid.c: Fix NB#112743 (launcher icons now
	centred). Remove all the subview blurring code, as apparently we don't
	want to blur now. Also reposition scroller/icons so that now icons do
	not clip against the top 70px when transitioning or scrolling.

2009-04-22  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/tidy/tidy-blur-group.c: Fixes NB#107274, NB#111296. Force blur
	group to recalculate if it was ever set to not blur (regardless of
	whether it was rendered or not).

2009-04-22  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#110893 - Dialpad is also opened by '#', '+' and '*' keys

	* src/home/hd-home.c (hd_home_desktop_key_press): Call UI is also
	launched by '#', '+' and '*' keys.

2009-04-22  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/home/hd-render-manager.c (hd_render_manager_actor_opaque):
	  Regression fix.  Unbroken subview->mainview transition.
	  Reverting the change which declared actors under effect
	  transparent, hence not blocking, thus showing something
	  inappropriate in that transition.
