@@ -1,6 +1,8 @@
 hildon-desktop (1:2.2.43-1~unreleased) unstable; urgency=low
 
   * writeme
+  Laszlo:
+  * Fixes: NB#98233 - Back button crash.
 
  -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Mon, 20 Apr 2009 13:48:28 +0300
 
